# flasklogin-tutorial

./: .env.example  .flake8  .gitignore  Dockerfile  Makefile  Pipfile  README.md  config.py  deploy.sh  gunicorn.conf.py  main.py  pyproject.toml  requirements.txt  setup.py  wsgi.py
.github/workflows/: pythonapp.yml
application/: __init__.py  forms.py  models.py
creds/: .gitignore
flask_login_tutorial/: __init__.py  assets.py  auth.py  forms.py  models.py  routes.py
flask_login_tutorial/static/src/js/: main.js
flask_login_tutorial/static/src/less/: account.less  dashboard.less  vars.less
flask_login_tutorial/templates/: analytics.jinja2  dashboard.jinja2  layout.jinja2  login.jinja2  signup.jinja2
helm/: charts.yml  values.yml
helm/templates/: deployment.yml  hpa.yml  service.yml
