[tool.poetry]
name = "flask_login_tutorial"
version = "0.1.3"
description = "Tutorial for building Flask applications with user authorization & login."
authors = ["Todd Birchard <todd@hackersandslackers.com>"]
maintainers = ["Todd Birchard <todd@hackersandslackers.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://hackersandslackers.com/flask-login-user-authentication/"
repository = "https://github.com/toddbirchard/flasklogin-tutorial/"
documentation = "https://hackersandslackers.com/flask-login-user-authentication/"
keywords = ["Flask", "Flask-Login", "Authentication", "Users", "Accounts"]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
flask = "*"
flask_sqlalchemy = "*"
flask_login = "*"
flask_assets = "*"
pymysql = "*"
flask_wtf = "*"
python-dotenv = "*"
email_validator = "*"
lesscpy = "*"
cssmin = "*"
jsmin = "*"
isort = "*"
black = "*"
flake8 = "*"
gunicorn = "*"

[tool.poetry.scripts]
run = "wsgi:app"

[tool.poetry.urls]
issues = "https://github.com/toddbirchard/flasklogin-tutorial/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
disable = "C0103,C0301,W0703,W0621"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["flask_login_tutorial", "config", "wsgi"]
